# boilers

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: mnist_minimal.ipynb
notebooks/2025-10-05-intro/: 00_overview.ipynb  00_setup.ipynb  01_linear_logistic_mlp.ipynb
src/boilers/data/: datasets.py
src/boilers/models/: linear.py  logistic.py  mlp.py
src/boilers/nb/: nbtools.py
src/boilers/training/: loop.py
tests/: test_shapes.py  test_smoke_train.py
