[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boilers"
version = "0.1.0"
description = "Deep learning implementations and blog-style notebooks."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Alexander Braafladt" },
]

# ✅ Only core runtime dependencies (lightweight, portable)
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "numpy>=1.26",
  "matplotlib>=3.9",
]

[project.optional-dependencies]
# 🧰 Developer + Notebook Environment
dev = [
  "pandas>=2.2",
  "scipy>=1.13",
  "seaborn>=0.13",
  "tqdm>=4.66",

  # Notebooks
  "jupyterlab>=4.2",
  "ipykernel>=6.29",
  "nbformat>=5.10",
  "notebook>=7.2",

  # Configs & experiment organization
  "pyyaml>=6.0",
  "omegaconf>=2.3",
  "hydra-core>=1.3",

  # Logging & visualization
  "rich>=13.7",
  "tensorboard>=2.16",
  "plotly>=5.20",
  "scikit-learn>=1.5",

  # Developer tools
  "black>=24.3",
  "ruff>=0.5",
  "isort>=5.13",
  "pytest>=8.2",
  "nbstripout>=0.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
